added heading, hero and about me sections

--- a/index.html
+++ b/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kevin Fang</title>
+
+    <link rel="stylesheet" href="./assets/styles/style.css" />
 </head>
+
 <body>
-    
+
+<div class="topsection">
+<header>
+<h1><a href='/'>Kevin Fang</a></h1>
+<!--navigation bar-->
+<nav>
+    <ul>
+        <li>
+            <a href="#about-me">About me</a>
+        </li>
+        <li>
+            <a href="#projects">Work</a>
+        </li>
+        <li>
+            <a href="#contact-me">Contact Me</a>
+        </li>
+        <li>
+            <a href="Resume">Resume</a>
+        </li>
+    </ul>
+</nav>
+</header>
+
+<!--hero/jumbotron-->
+<section class="hero">
+    <div class="hero-cta">
+        <h2>Disipline gives me freedom.</h2>
+        <p>
+            Wait. Where is my coffee?
+        </p>
+    </div>
+</section>
+</div>
+
+<!--"about me" section-->
+<section class="about-me">
+    <h1 id="section-name">About Me</h1>
+<div class="flex-row">
+    <ul>
+        <li class="intro">Hello, my name is <div class="colored-font">Kevin Fang</div></li>
+        <li class="intro">I am a <a href="https://github.com/hfang821" class="colored-font">Full-Stack Developer</div></li>
+        <li class="intro">Check out my <a href="https://github.com/hfang821?tab=repositories" class="colored-font">projects</a> page for my latest projects. </li>
+        <li class="intro">Or you can reach out to me directly through my <a href="#contact-me" class="colored-font">Contact page</a>.</li>
+    </ul>
+
+</div>
+</section>
+
+
+
+
+
 </body>
 </html>
