initial stage of styling for the website

--- a/index.html
+++ b/index.html
@@ -12,54 +12,101 @@
 <body>
 
 <div class="topsection">
-<header>
-<h1><a href='/'>Kevin Fang</a></h1>
-<!--navigation bar-->
-<nav>
-    <ul>
-        <li>
-            <a href="#about-me">About me</a>
-        </li>
-        <li>
-            <a href="#projects">Work</a>
-        </li>
-        <li>
-            <a href="#contact-me">Contact Me</a>
-        </li>
-        <li>
-            <a href="Resume">Resume</a>
-        </li>
-    </ul>
-</nav>
-</header>
+    <header>
+    <h1><a href='/'>Kevin Fang</a></h1>
+    <!--navigation bar-->
+    <nav>
+        <ul>
+            <li>
+                <a href="#about-me">About me</a>
+            </li>
+            <li>
+                <a href="#projects">Work</a>
+            </li>
+            <li>
+                <a href="#contact-me">Contact Me</a>
+            </li>
+            <li>
+                <a href="Resume">Resume</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
 
-<!--hero/jumbotron-->
-<section class="hero">
-    <div class="hero-cta">
-        <h2>Disipline gives me freedom.</h2>
-        <p>
-            Wait. Where is my coffee?
-        </p>
-    </div>
-</section>
+    <!--hero/jumbotron-->
+    <section class="hero">
+        <div class="hero-cta">
+            <h2>Disipline gives me freedom.</h2>
+            <p>
+                Wait. Where is my coffee?
+            </p>
+        </div>
+    </section>
 </div>
 
 <!--"about me" section-->
 <section class="about-me">
-    <h1 id="section-name">About Me</h1>
-<div class="flex-row">
-    <ul>
-        <li class="intro">Hello, my name is <div class="colored-font">Kevin Fang</div></li>
-        <li class="intro">I am a <a href="https://github.com/hfang821" class="colored-font">Full-Stack Developer</div></li>
-        <li class="intro">Check out my <a href="https://github.com/hfang821?tab=repositories" class="colored-font">projects</a> page for my latest projects. </li>
-        <li class="intro">Or you can reach out to me directly through my <a href="#contact-me" class="colored-font">Contact page</a>.</li>
-    </ul>
+    <h1 class="section-name">About Me</h1>
+    <div class="flex-row">
+        <div>
+            <!-- <h2 class="intro">Hello, my name is <div class="colored-font">Kevin Fang</div>
+            I am a <a href="https://github.com/hfang821" class="colored-font">Full-Stack Developer</a></h2>
 
-</div>
+            <h3 class="intro">Check out my <a href="https://github.com/hfang821?tab=repositories" class="colored-font">projects</a> page for my latest projects. 
+            Or you can reach out to me directly through my <a href="#contact-me" class="colored-font">Contact page</a>.</h3> -->
+            <h2>Hello, my name is <a href="https://github.com/hfang821?tab=repositories" class="colored-font">Kevin Fang</a>.
+                <br>
+                 Check out my page for my latest projects. 
+                <br>
+                 Or you can reach out to me directly through my Contact page. </h2>
+        </div>
+
+    </div>
 </section>
 
+<!--"projects" section-->
+        <section class="about-me">
+            <h1 class="section-name">projects</h1>
+            <div id="content">
+
+            <article id="calculator">
+                <h2>Personal Finance Calculator</h2>
+                <h4>React, CSS & JavaScript</h4>
+            </article>
+
+            <article id="atm">
+                <div class="position-right">
+                <h2>ATM Machine</h2>
+                <h4>HTML, CSS & JavaScript</h4>
+                </div>
+            </article>
 
 
+            <article id="password">
+                <h2>Password Generator</h2>
+                <h4>JavaScript</h4>
+            </article>
+
+            <article id="runbuddy">
+                <h2>Run-Buddy</h2>
+                <h4>HTML & CSS</h4>
+            </article>
+
+        </div>
+
+        </section>
+
+<!--"contact me" section-->
+<section class="contacts">
+    <h1>Contact Me</h1>
+    <nav class="bottomsection">
+        <a>519-701-1019</a>
+        <a href="http://www.linkedin.com/in/haoyufang">Linkedin</a>
+        <a href="https://github.com/hfang821">Github</a>
+    </nav>
+
+
+</section>
 
 
 </body>
