--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 <div class="topsection">
     <header>
-    <h1><a href='/'>Kevin Fang</a></h1>
+    <h1><a>Kevin Fang</a></h1>
     <!--navigation bar-->
     <nav>
         <ul>
             <li>
-                <a href="#about-me">About me</a>
+                <a href="#aboutme">About me</a>
             </li>
             <li>
                 <a href="#projects">Work</a>
             </li>
             <li>
-                <a href="#contact-me">Contact Me</a>
+                <a href="#contact-myself">Contact Me</a>
             </li>
             <li>
-                <a href="Resume">Resume</a>
+                <a href="./assets/Resume/Resume.pdf">Resume</a>
             </li>
         </ul>
     </nav>
@@ -45,10 +45,10 @@
 </div>
 
 <!--"about me" section-->
-<section class="about-me">
+<section class="about-me" id="aboutme">
     <h1 class="section-name">About Me</h1>
     <div class="flex-row">
-        <div>
+        <div id="introduction">
             <!-- <h2 class="intro">Hello, my name is <div class="colored-font">Kevin Fang</div>
             I am a <a href="https://github.com/hfang821" class="colored-font">Full-Stack Developer</a></h2>
 
@@ -56,39 +56,42 @@
             Or you can reach out to me directly through my <a href="#contact-me" class="colored-font">Contact page</a>.</h3> -->
             <h2>Hello, my name is <a href="https://github.com/hfang821?tab=repositories" class="colored-font">Kevin Fang</a>.
                 <br>
-                 Check out my page for my latest projects. 
+                 Check out my page for my <a href="https://github.com/hfang821?tab=repositories" class="colored-font">latest projects</a>. 
                 <br>
-                 Or you can reach out to me directly through my Contact page. </h2>
+                 Or you can reach out to me directly through my <a href="#contact-myself" class="colored-font">Contact page</a>. </h2>
+        </div>
+
+        <div id="picture">   
         </div>
 
     </div>
 </section>
 
 <!--"projects" section-->
-        <section class="about-me">
-            <h1 class="section-name">projects</h1>
+        <section class="about-me" id="projects">
+            <h1 class="section-project">projects</h1>
             <div id="content">
 
             <article id="calculator">
-                <h2>Personal Finance Calculator</h2>
+                <h2><a href="/" class="white-font">Personal Finance Calculator</a></h2>
                 <h4>React, CSS & JavaScript</h4>
             </article>
 
             <article id="atm">
                 <div class="position-right">
-                <h2>ATM Machine</h2>
+                <h2><a href="/" class="white-font">ATM Machine</a></h2>
                 <h4>HTML, CSS & JavaScript</h4>
                 </div>
             </article>
 
 
             <article id="password">
-                <h2>Password Generator</h2>
+                <h2><a href="/" class="white-font">Password Generator</a></h2>
                 <h4>JavaScript</h4>
             </article>
 
             <article id="runbuddy">
-                <h2>Run-Buddy</h2>
+                <h2><a href="https://hfang821.github.io/run-buddy/" class="white-font">Run-Buddy</a></h2>
                 <h4>HTML & CSS</h4>
             </article>
 
@@ -97,7 +100,7 @@
         </section>
 
 <!--"contact me" section-->
-<section class="contacts">
+<section class="contacts" id="contact-myself">
     <h1>Contact Me</h1>
     <nav class="bottomsection">
         <a>519-701-1019</a>
