non-responsible version done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                  Or you can reach out to me directly through my <a href="#contact-myself" class="colored-font">Contact page</a>. </h2>
         </div>
 
-        <div id="picture">   
+        <div id="picture">  
+            <p>Beautiful Lake Louise, Banff National Park</p> 
         </div>
 
     </div>
