--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         <div id="introduction">
             <!-- <h2 class="intro">Hello, my name is <div class="colored-font">Kevin Fang</div>
             I am a <a href="https://github.com/hfang821" class="colored-font">Full-Stack Developer</a></h2>
-
             <h3 class="intro">Check out my <a href="https://github.com/hfang821?tab=repositories" class="colored-font">projects</a> page for my latest projects. 
             Or you can reach out to me directly through my <a href="#contact-me" class="colored-font">Contact page</a>.</h3> -->
             <h2>Hello, my name is <a href="https://github.com/hfang821?tab=repositories" class="colored-font">Kevin Fang</a>.
@@ -74,8 +73,8 @@
             <div id="content">
 
             <article id="calculator">
-                <h2><a href="/" class="white-font">Personal Finance Calculator</a></h2>
-                <h4>React, CSS & JavaScript</h4>
+                <h2><a href="https://utorteam13.github.io/Team13_Project1/" class="white-font">Latest Pitch</a></h2>
+                <h4>HTML, CSS & JavaScript</h4>
             </article>
 
             <article id="atm">
@@ -87,7 +86,7 @@
 
 
             <article id="password">
-                <h2><a href="/" class="white-font">Password Generator</a></h2>
+                <h2><a href="https://hfang821.github.io/password-generator/" class="white-font">Password Generator</a></h2>
                 <h4>JavaScript</h4>
             </article>
 
