--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
             <article id="atm">
                 <div class="position-right">
-                <h2><a href="/" class="white-font">ATM Machine</a></h2>
-                <h4>HTML, CSS & JavaScript</h4>
+                <h2><a href="https://github.com/utorteam11/MOAT" class="white-font">Moat</a></h2>
+                <h4>JavaScript, Handlebars, Express.js, Sequelize(ORM)</h4>
                 </div>
             </article>
 
